--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+
 PRODUCTION_HOST = http://localhost:4200
 MAIL_DOMAIN = jdlandscaping.net
 UNSUBSCRIBE_LINK = https://beta.jdlandscaping.net/unsubscribe
@@ -5,6 +6,7 @@ CONTACT_US_SLACK_WEBHOOK_URL = https://hooks.slack.com/services/T7RV7S9HA/B014TC
 DATABASE_URL = postgres://root:root@localhost:5432/jobhub
 AWS_ACCESS_KEY_ID =
 AWS_SECRET_ACCESS_KEY =
+AWS_REGION =
 AWS_S3_BUCKET_NAME = staging-jdlandscaping-assets
 STORAGE_HOST = https://staging-jdlandscaping-assets.s3.amazonaws.com/
 STRIPE_PK =
@@ -16,3 +18,4 @@ PLAID_PUBLIC_KEY =
 SENDGRID_API_KEY = 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
 SANDBOX_MODE = 1
 GOOGLE_REVIEW_URL = https://bit.ly/3dLElpp
+LOG_TABLE_NAME = jdlandscaping-log
