--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@nestjs/swagger": "^4.4.0",
     "@nestjs/typeorm": "^7.0.0",
     "@nestjs/websockets": "^7.0.7",
-    "aws-sdk": "^2.651.0",
+    "aws-sdk": "^2.870.0",
     "bcrypt": "^4.0.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
@@ -63,7 +63,8 @@
     "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.24",
     "underscore": "^1.10.2",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.1.2",
