issue #217 - integrate logger chore: remove log table name from .env example file

--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,4 @@ PLAID_PUBLIC_KEY =
 SENDGRID_API_KEY = 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
 SANDBOX_MODE = 1
 GOOGLE_REVIEW_URL = https://bit.ly/3dLElpp
-LOG_TABLE_NAME = jdlandscaping-log
+LOG_TABLE_NAME =
